feat: thêm hash password, thêm auth login api, login qua jwt access_token
thay  đổi đường dẫn tới swagger là http://localhost:8080/api/v1/docs thêm tiền tố /api/v1/ vào api

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=
 DB_DATABASE=leetcode_clone_db
+
+#JWT Config
+JWT_SECRET_KEY=2e87a05e-f0b9-4b29-add2-c64da4698ea6
+JWT_ACCESS_TOKEN_EXPIRED=100d
