--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ DB_DATABASE=leetcode_clone_db
 #JWT Config
 JWT_SECRET_KEY=2e87a05e-f0b9-4b29-add2-c64da4698ea6
 JWT_ACCESS_TOKEN_EXPIRED=100d
+
+#CONFIG GMAIL
+MAIL_USER=qpham7286@gmail.com
+MAIL_PASSWORD=yicukintsdyrdotg
