fix: sửa lại toàn bộ message thành tiếng anh

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-#mysql config
+#Mysql Config
 DB_DIALECT=mysql
 DB_HOST=localhost
 DB_PORT=3306
@@ -10,6 +10,6 @@ DB_DATABASE=leetcode_clone_db
 JWT_SECRET_KEY=2e87a05e-f0b9-4b29-add2-c64da4698ea6
 JWT_ACCESS_TOKEN_EXPIRED=100d
 
-#CONFIG GMAIL
+#Gmail Config
 MAIL_USER=qpham7286@gmail.com
 MAIL_PASSWORD=yicukintsdyrdotg
