API_Cloudinary_upload_Video_Image

--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@ DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=
 DB_DATABASE=leetcode_clone_db
+CLOUDINARY_NAME= dopkp7og9
+CLOUDINARY_API_KEY= 125642319285243
+CLOUDINARY_API_SECRET= O8pJBI2SEyFKhOOri_blP7RYyMs
+
+
