--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@nestjs/sequelize": "^10.0.1",
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
+    "cloudinary": "^2.4.0",
     "mysql2": "^3.11.0",
+    "next-cloudinary": "^6.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6",
+    "streamifier": "^0.1.1",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20"
   },
@@ -42,6 +45,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.0",
