feat: cấu hình config cho google oauth

--- a/.env
+++ b/.env
@@ -13,3 +13,9 @@ JWT_ACCESS_TOKEN_EXPIRED=2h
 #Gmail Config
 MAIL_USER=qpham7286@gmail.com
 MAIL_PASSWORD=yicukintsdyrdotg
+
+#Google Oauth Config
+GOOGLE_CLIENT_ID=769954175129-mje8nl9sfm59rpcqavjdqjad267hjqk5.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CALLBACK_URL=http://localhost:8080/api/v1/auth/google/callback
+
