--- a/.env
+++ b/.env
@@ -13,3 +13,8 @@ JWT_ACCESS_TOKEN_EXPIRED=2h
 #Gmail Config
 MAIL_USER=qpham7286@gmail.com
 MAIL_PASSWORD=yicukintsdyrdotg
+
+#Github Config
+GITHUB_CLIENT_ID=Ov23liiACTRK7iG8e1yC
+GITHUB_CLIENT_SECRET=4560727060b599f3021dd3a70b1f8de02e5b1906
+GITHUB_CLIENT_URL=http://localhost:8080/api/v1/auth/github/callback
