Update after merge

--- a/.env
+++ b/.env
@@ -24,6 +24,8 @@ GITHUB_CLIENT_URL=http://localhost:8080/api/v1/auth/github/callback
 GOOGLE_CLIENT_ID=769954175129-mje8nl9sfm59rpcqavjdqjad267hjqk5.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_CALLBACK_URL=http://localhost:8080/api/v1/auth/google/callback
+
+#Cloudinary
 CLOUDINARY_NAME= dopkp7og9
 CLOUDINARY_API_KEY= 125642319285243
 CLOUDINARY_API_SECRET= O8pJBI2SEyFKhOOri_blP7RYyMs
