--- a/package.json
+++ b/package.json
@@ -32,22 +32,22 @@
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
     "@types/passport-google-oauth20": "^2.0.16",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "dayjs": "^1.11.13",
     "handlebars": "^4.7.8",
     "mysql2": "^3.11.0",
+    "next-cloudinary": "^6.12.0",
     "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "cloudinary": "^2.4.0",
-    "mysql2": "^3.11.0",
-    "next-cloudinary": "^6.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.3",
