--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/sequelize": "^10.0.1",
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@payos/node": "^1.0.10",
     "@types/passport-google-oauth20": "^2.0.16",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
