--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "bottleneck": "^2.19.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.4.0",
